# rori_discord_bot

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
src/: main.rs
src/discord/: mod.rs
src/rori/: database.rs  endpoint.rs  mod.rs
